--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -54,12 +54,12 @@ jobs:
         run: |
           find "$SDK_HOME/bin/" -type f -name "${PACKAGE_NAME}*.ipk" -exec cp {} "${{ github.workspace }}" \;
           find "${{ github.workspace }}" -type f -name "*.ipk" -exec ls -lh {} \;
-      - name: Release and Upload Assets
-        uses: softprops/action-gh-release@v1
+      - name: Store packages
+        uses: actions/upload-artifact@v2
         with:
-          files: "*.ipk"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: ${{ matrix.arch}}-packages
+          path: bin/packages/${{ matrix.arch }}/packages/*.ipk
+
 
   notify:
     name: Notify Release Publish
