--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -58,7 +58,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.arch}}-packages
-          path: "${{ github.workspace }}"/*.ipk
+          path: "${{ github.workspace }}/*.ipk"
 
   notify:
     name: Notify Release Publish
