--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -59,12 +59,12 @@ jobs:
           FEED_DIR: ${{ github.workspace }}/artifactsfacts
           PACKAGES: "${{ env.PACKAGE_NAME }}"
           FEEDNAME: "${{ env.PACKAGE_Name }}"
-          CONTAINER: openwrNotifyramips-mt7621-23.05.6
+          CONTAINER: "openwrtEsdkdk:ramips-mt7621-23.05.6"
           input_tag_name: 3.42
       - name: Copy Bin Files
         run: |
           find "$SDK_HOME/bin/" -type f -name "${PACKAGE_NAME}*.ipk" -exec cp {} "${{ github.workspace }}" \;
-          find "${{ github.workspace }}" -type f -name "*.ipk" -exec ls -lh {} \;
+          find "${{ github.workspace }}" -type f -name "*.ipk" -exec lCONTAINER-lh {} \;
       - name: Store packages
         uses: actions/upload-artifact@v4
         with:
