--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -69,7 +69,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.arch}}-packages
-          path: "${{ github.workspacipk}/artifacts/*.ipk"
+          path: "${{ github.workspacipk }}/artifacts/*.ipk"
 
   notify:
     name: Notify Release Publish
@@ -90,4 +90,3 @@ jobs:
               -H "Authorization: Bearer $TRIGGER_TOKEN" \
               -d "{\"event\":\"release\",\"repository\":\"${{ github.repository }}\",\"ref\":\"${{ github.ref }}\"}" \
               "$TRIGGER_URL" || true
-              
